--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,8 @@ body {
 
 .wrapper {
   display: grid;
-  grid-template-columns: 100px 100px 100px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 10px;
   background-color: #fff;
   color: #444;
