--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@ body {
 
 .wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 10px;
   background-color: #fff;
@@ -17,4 +17,109 @@ body {
   border-radius: 5px;
   padding: 20px;
   font-size: 150%;
+}
+
+.a {
+  grid-column: 1 /span 8;
+  grid-row: 1;
+  display: grid;
+  grid-template-columns: 3fr 1fr 1fr 1fr 1fr;
+  grid-gap: 5px;
+  background-color: #fff;
+  color: #444;
+}
+.q{
+  grid-column: 1
+}
+.r {
+  grid-column: 2;
+}
+.s{
+  grid-column: 3;
+}
+.t{
+  grid-column: 4;
+}
+.b {
+  grid-column: 2 /span 7;
+  grid-row: 6;
+}
+.d {
+  grid-column: 1;
+  grid-row: 2 / span 9;
+}
+.e {
+  grid-column: 2 / span 7;
+  grid-row: 2 / span 4;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 10px;
+
+}
+.widgetA {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+.widgetB {
+   display: flex;
+   align-items: center;
+   align-content: center;
+   justify-content: center;
+}
+.widgetC {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+.widgetD {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+
+.h {
+  grid-column: 2 / span 7;
+  grid-row: 7;
+}
+.j {
+  grid-column: 2 / span 1;
+  grid-row: 4 / span 2;
+}
+.k {
+  grid-column: 3 / span 1;
+  grid-row: 4 / span 2;
+}
+.g {
+  grid-column: 2 / span 7;
+  grid-row: 8 / span 1;
+}
+.i {
+  grid-column: 2 /span 7;
+  grid-row: 9 / span 1;
+}
+.l {
+  grid-column: 2 / span 7;
+  grid-row: 10 / span 1;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 10px;
+  background-color: #fff;
+  color: #444;
+}
+.m {
+  grid-column: 1;
+}
+.n {
+  grid-column: 2;
+}
+.o {
+  grid-column: 3;
+}
+.p {
+  grid-column: 4;
 }
