--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,3 @@
-/* ~~~~~ GLOBAL RULES ~~~~~ */
-
 /*=== Reset ===*/
 
 html, body, h1, h2, h3, h4, h5, h6, p {
@@ -11,10 +9,13 @@ html, body {
   height: 100%
 }
 
+/* ~~~~~ GLOBAL RULES ~~~~~ */
+
 body {
   margin: 40px;
   font-family: Tahoma;
-  background-color: #f9f9f9
+  background-color: #f9f9f9;
+  display: grid
 }
 
 .wrapper {
@@ -48,7 +49,9 @@ body {
   height: 50%;
 }
 
-.q {
+/*=== User Info ===*/
+
+.userInfo {
   grid-column: 1;
   font-family: 'Segoe UI';
   display: grid;
@@ -57,9 +60,6 @@ body {
   width: 60%;
   font-size: 75%;
 }
-
-/*=== USER INFO ===*/
-
 .userProfilePhoto {
   height: 10vh;
   border-radius: 5vh;
@@ -73,7 +73,7 @@ body {
   grid-row: 2;
 }
 
-/*=== MENU OPTIONS ===*/
+/*=== Menu Options ===*/
 
 .actMenu {
   grid-column: 2;
@@ -88,27 +88,110 @@ body {
   font-family: 'Segoe UI'
 }
 
+/* ~~~~~ SIDEBAR ~~~~~ */
 
+.sidebarHeader {
+  grid-column: 1;
+  grid-row: 1 / span 2;
+  font-family: 'Segoe UI';
+  font-size: 25px;
+  display: grid;
+  grid-template-rows: .25fr 1fr;
+  grid-gap: 5px;
+  padding: 0px 0px 15px 0px;
+  color: #444;
+  text-align: center;
+  align-items: center;
+}
+.d {
+  grid-column: 1 / span 2;
+  grid-row: 2 / span 7;
+  border: 1px solid;
+  border-color: #414143;
+  color: #444;
+  background-color: #fff;
+  width: 80%;
+  font-size: 60%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 20vh 10vh 10vh 10vh 10vh 10vh 10vh 10vh;
+}
+
+/*=== Team View ===*/
 
 .photo {
   grid-column: 1;
   grid-row: 1 / span 2
 }
+.teamImage{
+  height: 8vh;
+  border-radius: 5vh;
+}
 .steps {
   grid-column: 2;
   grid-row: 2;
 }
-.sidebarMenu {
-  grid-column: 1;
-  font-family: 'Segoe UI';
-  font-size: 20px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 5px;
-  padding: 0px 0px 15px 0px;
-  color: #444;
-  text-align: center;
+.teamstats {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid;
+  border-color: #414143;
+  font-size: 200%;
 }
+
+/*=== Profile View ===*/
+
+.profileUser {
+  grid-column: 1;
+  grid-row: 2;
+  justify-self: center;
+  font-size: 300%
+}
+
+.profileName {
+  grid-column: 1;
+  grid-row: 3;
+}
+
+.profileAddress {
+  grid-column: 1;
+  grid-row: 4;
+}
+.profileEmail {
+  grid-column: 1;
+  grid-row: 5;
+}
+.profileStride {
+  grid-column: 1;
+  grid-row: 6;
+}
+.profileStepGoal {
+  grid-column: 1;
+  grid-row: 7;
+}
+
+.key {
+  font-size: 200%;
+  justify-self: left;
+}
+
+.profileUserPhoto {
+  height: 20vh;
+  border-radius: 10vh;
+  justify-self: center
+}
+.viewTeam {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid;
+  border-color: #414143;
+  font-size: 200%;
+  grid-column: 1;
+  grid-row: 8;
+}
+
 .b {
   grid-column: 3 /span 6;
   grid-row: 6;
@@ -131,31 +214,10 @@ body {
   grid-column: 1;
   grid-row: 2;
 }
-.d {
-  grid-column: 1 / span 2;
-  grid-row: 2 / span 9;
-  border: 1px solid;
-  border-color: #414143;
-  color: #444;
-  background-color: #fff;
-  width: 80%;
-  font-size: 60%;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: .25fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-}
 .teammember {
   display: grid;
   grid-template-columns: 2;
   grid-auto-rows: 2;
-}
-.teamstats {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid;
-  border-color: #414143;
-  font-size: 200%;
 }
 .e {
   grid-column: 3 / span 6;
