Add event handler displaying hydration data on click while hiding other stats.

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,10 @@ body {
   display: grid
 }
 
+.hidden {
+  display: none !important;
+}
+
 .wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
