Remove vestigial commented out code

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,14 +18,10 @@ body {
   display: grid
 }
 
-.hidden {
-  display: none !important;
-}
-
 .wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: .1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 10px;
   background-color: #f9f9f9
   color: #444;
